# PeekaUsage

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/release-notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md
.github/workflows/: release.yml
.logo-lab/: gen-icons.py
docs/: app-update-plan.md
docs/superpowers/plans/: 2026-07-17-multi-provider-stage1.md  2026-07-17-ui-refactor-stage-a.md
docs/superpowers/specs/: 2026-07-17-multi-provider-design.md  2026-07-17-ui-refactor-design.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  island.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  provider_commands.rs  settings_commands.rs  stats_commands.rs  taskbar_commands.rs  update_commands.rs  window_commands.rs
src-tauri/src/config/: app_config.rs  atomic.rs  encryption.rs  migration.rs  mod.rs  system_env.rs
src-tauri/src/polling/: mod.rs
src-tauri/src/providers/: anthropic.rs  balance.rs  coding_plan.rs  gemini.rs  mod.rs  oauth_detect.rs  openai.rs  openrouter.rs  registry.rs  script_engine.rs  sigv4.rs  subscription.rs  traits.rs  types.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/tray/: mod.rs
src/assets/styles/: common.css  island.css  main.css  settings.css  variables.css  widget.css
src/components/common/: AppSelect.tsx  ConfirmDialog.tsx  EdgeDockHandle.tsx  ProviderIcon.tsx  TitleBar.tsx
src/components/island/: IslandWidget.tsx
src/components/settings/: ApiKeyInput.tsx  ProviderConfig.tsx  ProviderWizardDialog.tsx  SettingsPanel.tsx  UpdateSettings.tsx
src/components/ui/: button.tsx  dialog.tsx  switch.tsx
src/components/widget/: OpacityHandle.tsx  ProviderCard.tsx  RateLimitBadge.tsx  SubscriptionBadge.tsx  UsageProgressBar.tsx  UsageStatsPanel.tsx  WidgetContainer.tsx
src/composables/: useEdgeDock.ts  usePolling.ts  useProviders.ts  useWindowControls.ts
src/i18n/: index.tsx  messages.ts  windowLabels.ts
src/lib/: utils.ts
src/stores/: providerStore.ts  settingsStore.ts  updateStore.ts
src/types/: provider.ts  settings.ts  stats.ts
src/utils/: autostart.ts  formatters.ts  ipc.ts  theme.ts  windowBounds.ts
