[package]
name = "peeka-usage"
version = "0.1.10"
description = "Desktop widget for tracking OpenAI, Anthropic, and OpenRouter usage."
authors = ["Star Chen <cxsgdsg1@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/StarChen4/PeekaUsage"
repository = "https://github.com/StarChen4/PeekaUsage"

[lib]
name = "peeka_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
