[package]
name = "peeka-usage"
version = "0.2.0"
description = "Desktop widget for tracking OpenAI, Anthropic, and OpenRouter usage."
authors = ["Star Chen <cxsgdsg1@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/yaoliwen542-sketch/PeekaUsage"
repository = "https://github.com/yaoliwen542-sketch/PeekaUsage"

[lib]
name = "peeka_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rquickjs = { version = "0.7", features = ["loader", "allocator"] }
jsonpath-rust = "0.7"
url = "2"

# 任务 M11：Windows 写用户环境变量后需要广播 WM_SETTINGCHANGE。
# 版本与 Cargo.lock 中已有的 windows-sys 0.61.x 对齐（dirs-sys/zbus 等传递依赖已在用）。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
